Implementation du formulaire de création d'entente