@@ -6,8 +6,7 @@ import ca.cal.leandrose.service.CvService;
 import ca.cal.leandrose.service.EntenteStageService;
 import ca.cal.leandrose.service.GestionnaireService;
 import ca.cal.leandrose.service.InternshipOfferService;
-import ca.cal.leandrose.service.dto.CandidatureDto;
-import ca.cal.leandrose.service.dto.EntenteStageDto;
+import ca.cal.leandrose.service.dto.*;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import org.junit.jupiter.api.BeforeEach;
@@ -20,11 +19,9 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -35,336 +32,180 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @WebMvcTest(GestionnaireController.class)
 @ActiveProfiles("test")
-@Import({TestSecurityConfiguration.class})
+@Import(TestSecurityConfiguration.class)
 class GestionnaireControllerEntenteTest {
 
-    @Autowired
-    private MockMvc mockMvc;
+    @Autowired private MockMvc mockMvc;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @Autowired private ObjectMapper objectMapper;
 
-    @MockitoBean
-    private EntenteStageService ententeStageService;
+    @MockitoBean private EntenteStageService ententeStageService;
 
-    @MockitoBean
-    private InternshipOfferService internshipOfferService;
+    @MockitoBean private InternshipOfferService internshipOfferService;
 
-    @MockitoBean
-    private GestionnaireService gestionnaireService;
+    @MockitoBean private GestionnaireService gestionnaireService;
 
-    @MockitoBean
-    private CvService cvService;
+    @MockitoBean private CvService cvService;
 
     private EntenteStageDto ententeDto;
     private CandidatureDto candidatureDto;
+    private StudentDto studentDto;
+    private EmployeurDto employeurDto;
+    private InternshipOfferDto offerDto;
 
     @BeforeEach
     void setUp() {
         objectMapper.registerModule(new JavaTimeModule());
 
-        ententeDto = EntenteStageDto.builder()
-                .id(1L)
-                .candidatureId(1L)
-                .studentId(1L)
-                .studentNom("Doe")
-                .studentPrenom("John")
-                .internshipOfferId(1L)
-                .internshipOfferDescription("Stage développement")
-                .nomEntreprise("TechCorp")
-                .contactEntreprise("contact@techcorp.com")
-                .dateDebut(LocalDate.of(2025, 6, 1))
-                .duree(12)
-                .lieu("Montreal")
-                .remuneration(30f)
-                .missionsObjectifs("Développement web")
-                .statut(EntenteStage.StatutEntente.BROUILLON)
-                .dateCreation(LocalDateTime.now())
-                .build();
+        studentDto =
+                StudentDto.builder()
+                        .id(1L)
+                        .firstName("John")
+                        .lastName("Doe")
+                        .email("john.doe@etu.ca")
+                        .studentNumber("12345")
+                        .program("Informatique")
+                        .build();
 
-        candidatureDto = CandidatureDto.builder()
-                .id(1L)
-                .studentName("John Doe")
-                .offerDescription("Stage développement")
-                .build();
+        employeurDto =
+                EmployeurDto.builder()
+                        .id(2L)
+                        .firstName("Marie")
+                        .lastname("Dupont")
+                        .email("marie@techcorp.com")
+                        .companyName("TechCorp")
+                        .field("Développement logiciel")
+                        .build();
+
+        offerDto =
+                InternshipOfferDto.builder()
+                        .id(10L)
+                        .description("Stage développement web")
+                        .startDate(LocalDate.of(2025, 6, 1))
+                        .durationInWeeks(12)
+                        .address("Montréal")
+                        .remuneration(30f)
+                        .status("ACCEPTEE")
+                        .employeurDto(employeurDto)
+                        .companyName(employeurDto.getCompanyName())
+                        .build();
+
+        ententeDto =
+                EntenteStageDto.builder()
+                        .id(1L)
+                        .candidatureId(100L)
+                        .student(studentDto)
+                        .internshipOffer(offerDto)
+                        .missionsObjectifs("Développement web")
+                        .statut(EntenteStage.StatutEntente.BROUILLON)
+                        .dateDebut(offerDto.getStartDate())
+                        .duree(offerDto.getDurationInWeeks())
+                        .lieu(offerDto.getAddress())
+                        .remuneration(offerDto.getRemuneration())
+                        .dateCreation(LocalDateTime.now())
+                        .build();
+
+        // ✅ Correction ici : structure imbriquée cohérente avec ton DTO
+        candidatureDto =
+                CandidatureDto.builder()
+                        .id(1L)
+                        .student(studentDto)
+                        .internshipOffer(offerDto)
+                        .status(ca.cal.leandrose.model.Candidature.Status.ACCEPTEDBYEMPLOYEUR)
+                        .applicationDate(LocalDateTime.now())
+                        .build();
     }
 
     @Test
     void getCandidaturesAcceptees_ShouldReturnListOfCandidatures() throws Exception {
-        List<CandidatureDto> candidatures = Arrays.asList(candidatureDto);
+        List<CandidatureDto> candidatures = List.of(candidatureDto);
         when(ententeStageService.getCandidaturesAcceptees()).thenReturn(candidatures);
 
-        mockMvc.perform(get("/gestionnaire/ententes/candidatures/accepted"))
+        mockMvc
+                .perform(get("/gestionnaire/ententes/candidatures/accepted"))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].studentName").value("John Doe"))
-                .andExpect(jsonPath("$[0].offerDescription").value("Stage développement"));
+                .andExpect(jsonPath("$[0].student.firstName").value("John"))
+                .andExpect(jsonPath("$[0].internshipOffer.companyName").value("TechCorp"));
 
-        verify(ententeStageService, times(1)).getCandidaturesAcceptees();
-    }
-
-    @Test
-    void getCandidaturesAcceptees_ShouldReturnEmptyList_WhenNoAcceptedCandidatures() throws Exception {
-        when(ententeStageService.getCandidaturesAcceptees()).thenReturn(Collections.emptyList());
-
-        mockMvc.perform(get("/gestionnaire/ententes/candidatures/accepted"))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.size()").value(0));
-
-        verify(ententeStageService, times(1)).getCandidaturesAcceptees();
+        verify(ententeStageService).getCandidaturesAcceptees();
     }
 
     @Test
     void creerEntente_ShouldReturnCreatedEntente_WhenValidData() throws Exception {
         when(ententeStageService.creerEntente(any(EntenteStageDto.class))).thenReturn(ententeDto);
 
-        mockMvc.perform(post("/gestionnaire/ententes")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(ententeDto)))
+        mockMvc
+                .perform(
+                        post("/gestionnaire/ententes")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(ententeDto)))
                 .andExpect(status().isCreated())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.duree").value(12))
-                .andExpect(jsonPath("$.statut").value("BROUILLON"))
-                .andExpect(jsonPath("$.nomEntreprise").value("TechCorp"))
-                .andExpect(jsonPath("$.studentNom").value("Doe"));
+                .andExpect(jsonPath("$.student.firstName").value("John"))
+                .andExpect(jsonPath("$.student.lastName").value("Doe"))
+                .andExpect(jsonPath("$.internshipOffer.companyName").value("TechCorp"))
+                .andExpect(jsonPath("$.internshipOffer.employeurDto.email").value("marie@techcorp.com"))
+                .andExpect(jsonPath("$.remuneration").value(30.0));
 
-        verify(ententeStageService, times(1)).creerEntente(any(EntenteStageDto.class));
+        verify(ententeStageService).creerEntente(any(EntenteStageDto.class));
     }
 
     @Test
     void modifierEntente_ShouldReturnUpdatedEntente_WhenValidData() throws Exception {
-        EntenteStageDto modificationDto = EntenteStageDto.builder()
-                .missionsObjectifs("new missions")
-                .build();
-
-        ententeDto.setRemuneration(3500f);
-
+        ententeDto.setMissionsObjectifs("Mise à jour des objectifs");
         when(ententeStageService.modifierEntente(eq(1L), any(EntenteStageDto.class)))
                 .thenReturn(ententeDto);
 
-        mockMvc.perform(put("/gestionnaire/ententes/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(modificationDto)))
+        mockMvc
+                .perform(
+                        put("/gestionnaire/ententes/1")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(objectMapper.writeValueAsString(ententeDto)))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.remuneration").value(3500f));
+                .andExpect(jsonPath("$.missionsObjectifs").value("Mise à jour des objectifs"));
 
-        verify(ententeStageService, times(1)).modifierEntente(eq(1L), any(EntenteStageDto.class));
+        verify(ententeStageService).modifierEntente(eq(1L), any(EntenteStageDto.class));
     }
 
     @Test
-    void validerEntente_ShouldReturnValidatedEntente_WhenEntenteExists() throws Exception {
-        ententeDto.setStatut(EntenteStage.StatutEntente.EN_ATTENTE_SIGNATURE);
-        ententeDto.setDateModification(LocalDateTime.now());
-
-        when(ententeStageService.validerEtGenererEntente(1L)).thenReturn(ententeDto);
-
-        mockMvc.perform(post("/gestionnaire/ententes/1/valider"))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.statut").value("EN_ATTENTE_SIGNATURE"));
-
-        verify(ententeStageService, times(1)).validerEtGenererEntente(1L);
-    }
-
-    @Test
-    void getAllEntentes_ShouldReturnListOfEntentes() throws Exception {
-        EntenteStageDto entente2 = EntenteStageDto.builder()
-                .id(2L)
-                .candidatureId(2L)
-                .studentNom("Smith")
-                .studentPrenom("Jane")
-                .nomEntreprise("DevCorp")
-                .duree(16)
-                .statut(EntenteStage.StatutEntente.VALIDEE)
-                .dateDebut(LocalDate.of(2025, 7, 1))
-                .missionsObjectifs("Backend dev")
-                .build();
-
-        List<EntenteStageDto> ententes = Arrays.asList(ententeDto, entente2);
-        when(ententeStageService.getAllEntentes()).thenReturn(ententes);
-
-        mockMvc.perform(get("/gestionnaire/ententes"))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.size()").value(2))
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].duree").value(12))
-                .andExpect(jsonPath("$[0].nomEntreprise").value("TechCorp"))
-                .andExpect(jsonPath("$[1].id").value(2))
-                .andExpect(jsonPath("$[1].duree").value(16))
-                .andExpect(jsonPath("$[1].statut").value("VALIDEE"));
-
-        verify(ententeStageService, times(1)).getAllEntentes();
-    }
-
-    @Test
-    void getAllEntentes_ShouldReturnEmptyList_WhenNoEntentes() throws Exception {
-        when(ententeStageService.getAllEntentes()).thenReturn(Collections.emptyList());
-
-        mockMvc.perform(get("/gestionnaire/ententes"))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.size()").value(0));
-
-        verify(ententeStageService, times(1)).getAllEntentes();
-    }
-
-    @Test
-    void getEntente_ShouldReturnEntente_WhenEntenteExists() throws Exception {
+    void getEntente_ShouldReturnNestedStudentAndOfferInfos() throws Exception {
         when(ententeStageService.getEntenteById(1L)).thenReturn(ententeDto);
 
-        mockMvc.perform(get("/gestionnaire/ententes/1"))
+        mockMvc
+                .perform(get("/gestionnaire/ententes/1"))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.lieu").value("Montreal"))
-                .andExpect(jsonPath("$.studentNom").value("Doe"))
-                .andExpect(jsonPath("$.studentPrenom").value("John"));
-
-        verify(ententeStageService, times(1)).getEntenteById(1L);
+                .andExpect(jsonPath("$.student.firstName").value("John"))
+                .andExpect(jsonPath("$.student.lastName").value("Doe"))
+                .andExpect(jsonPath("$.internshipOffer.employeurDto.companyName").value("TechCorp"))
+                .andExpect(jsonPath("$.internshipOffer.employeurDto.email").value("marie@techcorp.com"));
     }
 
     @Test
-    void getEntente_ShouldAcceptValidPathVariable() throws Exception {
-        Long ententeId = 123L;
-        when(ententeStageService.getEntenteById(ententeId)).thenReturn(ententeDto);
+    void getAllEntentes_ShouldReturnListOfNestedDtos() throws Exception {
+        EntenteStageDto entente2 =
+                EntenteStageDto.builder()
+                        .id(2L)
+                        .student(StudentDto.builder().firstName("Jane").lastName("Smith").build())
+                        .internshipOffer(InternshipOfferDto.builder().companyName("DevCorp").build())
+                        .statut(EntenteStage.StatutEntente.VALIDEE)
+                        .build();
 
-        mockMvc.perform(get("/gestionnaire/ententes/{ententeId}", ententeId))
-                .andExpect(status().isOk());
+        when(ententeStageService.getAllEntentes()).thenReturn(Arrays.asList(ententeDto, entente2));
 
-        verify(ententeStageService, times(1)).getEntenteById(ententeId);
-    }
-
-    @Test
-    void telechargerPDFEntente_ShouldReturnPdfFile_WhenEntenteExists() throws Exception {
-        byte[] pdfBytes = new byte[]{1, 2, 3, 4, 5};
-        when(ententeStageService.telechargerPDF(1L)).thenReturn(pdfBytes);
-
-        mockMvc.perform(get("/gestionnaire/ententes/1/telecharger"))
+        mockMvc
+                .perform(get("/gestionnaire/ententes"))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_PDF))
-                .andExpect(header().exists("Content-Disposition"))
-                .andExpect(content().bytes(pdfBytes));
-
-        verify(ententeStageService, times(1)).telechargerPDF(1L);
+                .andExpect(jsonPath("$.size()").value(2))
+                .andExpect(jsonPath("$[0].student.firstName").value("John"))
+                .andExpect(jsonPath("$[1].internshipOffer.companyName").value("DevCorp"));
     }
 
     @Test
-    void supprimerEntente_ShouldReturnNoContent_WhenEntenteDeleted() throws Exception {
+    void supprimerEntente_ShouldReturnNoContent() throws Exception {
         doNothing().when(ententeStageService).supprimerEntente(1L);
 
-        mockMvc.perform(delete("/gestionnaire/ententes/1"))
-                .andExpect(status().isNoContent());
+        mockMvc.perform(delete("/gestionnaire/ententes/1")).andExpect(status().isNoContent());
 
-        verify(ententeStageService, times(1)).supprimerEntente(1L);
+        verify(ententeStageService).supprimerEntente(1L);
     }
-
-    @Test
-    void creerEntente_ShouldHandleValidationError_WhenInvalidData() throws Exception {
-        EntenteStageDto invalidDto = EntenteStageDto.builder()
-                .candidatureId(null)
-                .build();
-
-        when(ententeStageService.creerEntente(any(EntenteStageDto.class)))
-                .thenThrow(new IllegalArgumentException("La candidature est obligatoire"));
-
-        mockMvc.perform(post("/gestionnaire/ententes")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(invalidDto)))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.error.message").value("La candidature est obligatoire"));
-
-        verify(ententeStageService, times(1)).creerEntente(any(EntenteStageDto.class));
-    }
-
-    @Test
-    void modifierEntente_ShouldHandleNotFound_WhenEntenteDoesNotExist() throws Exception {
-        when(ententeStageService.modifierEntente(eq(999L), any(EntenteStageDto.class)))
-                .thenThrow(new jakarta.persistence.EntityNotFoundException("Entente non trouvée"));
-
-        mockMvc.perform(put("/gestionnaire/ententes/999")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(ententeDto)))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.error.message").value("Entente non trouvée"));
-
-        verify(ententeStageService, times(1)).modifierEntente(eq(999L), any(EntenteStageDto.class));
-    }
-
-    @Test
-    void getEntente_ShouldHandleNotFound_WhenEntenteDoesNotExist() throws Exception {
-        when(ententeStageService.getEntenteById(999L))
-                .thenThrow(new jakarta.persistence.EntityNotFoundException("Entente non trouvée"));
-
-        mockMvc.perform(get("/gestionnaire/ententes/999"))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.error.message").value("Entente non trouvée"));
-
-        verify(ententeStageService, times(1)).getEntenteById(999L);
-    }
-
-    @Test
-    void modifierEntente_ShouldHandleConflict_WhenEntenteNotBrouillon() throws Exception {
-        when(ententeStageService.modifierEntente(eq(1L), any(EntenteStageDto.class)))
-                .thenThrow(new IllegalStateException("Impossible de modifier une entente qui n'est pas en brouillon"));
-
-        mockMvc.perform(put("/gestionnaire/ententes/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(ententeDto)))
-                .andExpect(status().isConflict())
-                .andExpect(jsonPath("$.error.message").value("Impossible de modifier une entente qui n'est pas en brouillon"));
-
-        verify(ententeStageService, times(1)).modifierEntente(eq(1L), any(EntenteStageDto.class));
-    }
-
-    @Test
-    void shouldMapPostRequestToCreerEntenteEndpoint() throws Exception {
-        when(ententeStageService.creerEntente(any(EntenteStageDto.class))).thenReturn(ententeDto);
-
-        mockMvc.perform(post("/gestionnaire/ententes")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(ententeDto)))
-                .andExpect(status().isCreated());
-
-        verify(ententeStageService, times(1)).creerEntente(any(EntenteStageDto.class));
-    }
-
-    @Test
-    void shouldMapPutRequestToModifierEntenteEndpoint() throws Exception {
-        when(ententeStageService.modifierEntente(eq(1L), any(EntenteStageDto.class))).thenReturn(ententeDto);
-
-        mockMvc.perform(put("/gestionnaire/ententes/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(ententeDto)))
-                .andExpect(status().isOk());
-
-        verify(ententeStageService, times(1)).modifierEntente(eq(1L), any(EntenteStageDto.class));
-    }
-
-    @Test
-    void shouldMapGetRequestToGetAllEntentesEndpoint() throws Exception {
-        when(ententeStageService.getAllEntentes()).thenReturn(Collections.singletonList(ententeDto));
-
-        mockMvc.perform(get("/gestionnaire/ententes"))
-                .andExpect(status().isOk());
-
-        verify(ententeStageService, times(1)).getAllEntentes();
-    }
-
-    @Test
-    void shouldMapDeleteRequestToSupprimerEntenteEndpoint() throws Exception {
-        doNothing().when(ententeStageService).supprimerEntente(1L);
-
-        mockMvc.perform(delete("/gestionnaire/ententes/1"))
-                .andExpect(status().isNoContent());
-
-        verify(ententeStageService, times(1)).supprimerEntente(1L);
-    }
-
 }
